--- a/src/css/app.css
+++ b/src/css/app.css
@@ -2,114 +2,146 @@
     background-color: white;
     border-color: #ccc;
     color: black;
+    position: fixed;
+    width: 100%;
+    z-index: 1;
 }
-.navbar-inverse .navbar-brand:focus, .navbar-inverse .navbar-brand:hover
-{
-    color: black;
+.appname{
+  cursor: pointer;
 }
-.navbar-inverse .navbar-brand, .navbar-inverse .navbar-brand
-{
-    color: black;
-}
-.navbar-inverse .navbar-toggle:focus, .navbar-inverse .navbar-toggle:hover
-{
-    background-color: transparent;
-}
-.navbar-inverse .navbar-toggle .icon-bar
-{
-    background-color: black;
-}
-.navbar-inverse .navbar-nav>li>a
-{
-    color:#0e72a2;
-}
-.navbar-inverse .navbar-nav>li>a:hover
-{
-    color:#0e72a2;
-}
-.navbar-brand.applicationname
-{
-    height: 57px;
-    width: 139px;
-    left: 0px;
-    top: 0px;
-    border-radius: nullpx;
-    color: #6855D6;;
-    font-weight: 600;
-    font-family: Baloo Bhai;
-    font-size: 36px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 57px;
-    letter-spacing: 0em;
-    text-align: left;
-
-}
-.navbar-inverse {
-    background-color: #00c4b4 !important;
-    border-color: #ccc;
-    color: black;
-}
-.chartcontainer{
+.customnav{
     display: grid;
-    grid-template-columns: 5% 55% 40%;
-}
-.userinput{
-    margin: 2%;
-    display: grid;
-    grid-template-columns: 40% 40% 20%;
-}
-.userinputbox{
     margin: 10px;
-    height: 40px;
     padding: 10px;
-    display: grid;
-    grid-template-columns: 40% 40% 20%;
 }
-.chartcontainer .options{
+.customnav .options{
     display: grid;
-    grid-template-rows: 33% 33% 33%;
-    margin: 10%;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: 100%;
 }
-.chartcontainer .options .labelicon{
+.customnav .applicationname{
+    color: #6855D6;
+    font-family: Baloo Bhai;
+font-size: 36px;
+font-style: normal;
+font-weight: 400;
+line-height: 57px;
+letter-spacing: 0em;
+text-align: left;
+}
+.movie .serachbox{
+    position: absolute;
+width: 1084px;
+height: 375px;
+left: 178px;
+top: 140px;
+
+background: #F2F1F8;
+border-radius: 16px;
+}
+.movie .serachbox .text{
     margin: 10px;
-    background-color: #00c4b4;
-    color: white;
+    position: relative;
     text-align: center;
-    padding: 5px;
-    border-radius: 5px;
-    cursor: pointer;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: normal;
+    color: #000000;
 }
-.shadowbox
-{
-    background: #ffffff !important;
-    border-radius: 4px !important;
-    box-shadow: 0 2px 4px 2px rgba(218, 218, 218, 0.5) !important;
-    -webkit-box-shadow:0 2px 4px 2px rgba(218, 218, 218, 0.5) !important;
-    -moz-box-shadow:0 2px 4px 2px rgba(218, 218, 218, 0.5) !important;
-}
-.labeloption{
+.input-container {
+    display: -ms-flexbox; /* IE10 */
+    display: flex;
+    width: 100%;
+    margin-bottom: 15px;
+  }
+  
+  .icon {
+    padding: 10px;
+    background: dodgerblue;
+    color: white;
+    min-width: 50px;
+    text-align: center;
+  }
+  
+  .input-field {
+    width: 100%;
+    padding: 10px;
+    outline: none;
+  }
+  
+  .input-field:focus {
+    border: 2px solid dodgerblue;
+  }
+  .input-group-addon{
+background-color: white;
+border-right: none;
+  }
+  .movie .serachbox .search{
     display: grid;
-    grid-template-columns: 45% 5% 45%;
-    height: 20px;
-    color: white;
-    text-align: center;
-    margin: 5px;
+  }
+  .input-group{
+    margin: 3px;
+  }
+  .movie .serachbox .search .custom{
+    background: #6855D6;
+    color: #FFFFFF;
+
+  }
+  .movie .browsetext{
+    font-family: Inter;
+font-style: normal;
+font-weight: normal;
+
+
+color: #000000;
+  }
+.movie .category .type{
+  margin: 4px;
+  cursor: pointer;
 }
-.labeloption .add{
-    margin: 2px;
-    /* background-color: #00c4b4; */
-    border-radius: 5px;
-   cursor: pointer;
+.movie .category .type:hover{
+  background-color: #F7F7F7;;
+}
+ .movielist{
+  position: absolute;
+ 
 
 }
-.addoptions{
-    display: grid;
-    grid-template-rows: 20% 80%;
+ .movielist .moviename{
+
+margin: 5px;
+cursor: pointer;
+}
+ .movielist .moviename:hover{
+  box-shadow: 2px 10px 11px rgba(33,33,33,.2);
 }
 
-.addlayout{
-    margin: 10px;
-    display: grid;
-    grid-template-rows: 35% 65%;
+ .movielist .date{
+  display: block;
+}
+.moviedetail .overview{
+  position: relative;
+  display: grid;
+  grid-template-columns: 70% 30%;
+  grid-template-rows: 70% 30%;
+  
+}
+.moviedetail{
+  position: absolute;
+    top: 100px;
+  margin-bottom: 15%;
+  max-height: 100vh;
+}
+.moviedetail .overview .status{
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: 25% 25% 25% 25%;
+  height: 250px;
+}
+.moviedetail .keywords .name{
+  background: #F7F7F7;
+  display: inline-block;
+  border-radius: 8px;
+  padding: 5px;
+  margin: 2px;
 }
